--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -105,7 +105,7 @@
                             <div class="col-lg-6">
                                 <ul>
                                     <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 32</li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Name,Lastname</strong>Rihards Ivanovs</li>
+                                    <li><i class="icofont-rounded-right"></i> <strong>Name,Lastname</strong> Rihards Ivanovs</li>
                                     <li><i class="icofont-rounded-right"></i> <strong>Email:</strong>rihardsivanovs9@gmail.com</li>
                                 </ul>
                             </div>
@@ -266,7 +266,7 @@
 
                         <h3 class="resume-title">Education</h3>
                         <div class="resume-item">
-                            <h4>Master of Fine Arts &amp; Graphic Design</h4>
+                            <h4> Riga 3 rd vocational school programming technician, ENI Level 3 &amp; programmē</h4>
                             <h5>2015 - 2016</h5>
                             <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
                             <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
