--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,7 +36,7 @@
 
             <div class="profile">
                 <img src="assets/img/96091113_527373358151159_2439751800216092672_n.jpg" alt="" class="img-fluid rounded-circle">
-                <h1 class="text-light"><a href="index.html">Rihads Ivanovs</a></h1>
+                <h1 class="text-light"><a href="index.html">Rihards Ivanovs</a></h1>
                 <div class="social-links mt-3 text-center">
                     <a href="https://www.facebook.com/RihardsI" class="facebook"><i class="bx bxl-facebook"></i></a>
                     <a href="https://www.instagram.com/rihards.i/" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -266,10 +266,10 @@
 
                         <h3 class="resume-title">Education</h3>
                         <div class="resume-item">
-                            <h4> Riga 3 rd vocational school programming technician, ENI Level 3 &amp; programmē</h4>
-                            <h5>2015 - 2016</h5>
-                            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+                            <h4> Riga 3 rd vocational school programming technician, ENI Level 3 &amp; programming technician</h4>
+                            <h5>2015 - 2016</h5><br>
+                            <p><em>Riga 3 rd vocational school programming</em></p>
+                            <p> PHP, MySQL, HTML, CSS</p>
                         </div>
                         <div class="resume-item">
                             <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
