--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -272,10 +272,16 @@
                             <p> PHP, MySQL, HTML, CSS</p>
                         </div>
                         <div class="resume-item">
-                            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-                            <h5>2010 - 2014</h5>
-                            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+                            <h4>Riga Technical University &amp; INFORMATION TECHNOLOGY</h4>
+                            <h5>2016 - 2020</h5>
+                            <p><em>First level higher professional study programs:</em></p>
+                            <p></p>
+                        </div>
+                        <div class="resume-item">
+                            <h4>Riga Technical University &amp; INFORMATION TECHNOLOGY</h4>
+                            <h5>2016 - 2020</h5>
+                            <p><em>First level higher professional study programs:</em></p>
+                            <p></p>
                         </div>
                     </div>
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
