--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -276,7 +276,7 @@
                             <h5>2016 - 2020</h5>
                             <p><em>First level higher professional study programs:</em></p>
                             <p></p>
-                        </div>
+                        </div>w
                         <div class="resume-item">
                             <h4>Riga Technical University &amp; INFORMATION TECHNOLOGY</h4>
                             <h5>2016 - 2020</h5>
