--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -259,7 +259,7 @@
                             <h4>wordpress Developer</h4>
                             <h5>30.06.2017 – 01.08.2017</h5>
                             <ul>
-                                <p><em>PILAT REAL ESTATE</em></p>
+                                <p><em>PILAT REAL ESTATE</em><img src="assets/img/images.png"height="50px" width="200px"></p>
                                 <p>Job responsibilities were to create a page home page on a worksheet after drawing up real estate after building in a master for locational buildings in code design and design type code part</p>
                             </ul>
                         </div>
@@ -268,8 +268,8 @@
                         <div class="resume-item">
                             <h4> Riga 3 rd vocational school programming technician, ENI Level 3 &amp; programming technician</h4>
                             <h5>2015 - 2016</h5><br>
-                            <p><em>Riga 3 rd vocational school programming</em></p>
-                            <p> PHP, MySQL, HTML, CSS</p>
+                            <p><em>Riga 3 rd vocational school programming</em><img src="assets/img/15d585da0bf25110439bae27dd7a85fd.jpg"height="200px" width="200px"></p>
+                            <p> PHP,MySQL,HTML,CSS,JavaScript, </p>
                         </div>
                         <div class="resume-item">
                             <h4>Riga Technical University &amp; INFORMATION TECHNOLOGY</h4>
