--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -266,21 +266,21 @@
 
                         <h3 class="resume-title">Education</h3>
                         <div class="resume-item">
-                            <h4> Riga 3 rd vocational school programming technician, ENI Level 3 &amp; programming technician</h4>
+                            <h4> Riga 3 rd vocational school programming technician, ENI Level 3 &amp; programming technician</h4><img src="assets/img/15d585da0bf25110439bae27dd7a85fd.jpg"height="100px" width="100px">
                             <h5>2015 - 2016</h5><br>
-                            <p><em>Riga 3 rd vocational school programming</em><img src="assets/img/15d585da0bf25110439bae27dd7a85fd.jpg"height="200px" width="200px"></p>
-                            <p> PHP,MySQL,HTML,CSS,JavaScript, </p>
+                            <p><em>Riga 3 rd vocational school programming</em></p>
+                            <p>PHP,MySQL,HTML,CSS,JavaScript,ajax </p>
                         </div>
                         <div class="resume-item">
-                            <h4>Riga Technical University &amp; INFORMATION TECHNOLOGY</h4>
+                            <h4>Riga Technical University &amp; INFORMATION TECHNOLOGY</h4><img src="assets/img/lejupielādēt.png"height="100px" width="100px">
                             <h5>2016 - 2020</h5>
                             <p><em>First level higher professional study programs:</em></p>
                             <p></p>
-                        </div>w
+                        </div>
                         <div class="resume-item">
-                            <h4>Riga Technical University &amp; INFORMATION TECHNOLOGY</h4>
-                            <h5>2016 - 2020</h5>
-                            <p><em>First level higher professional study programs:</em></p>
+                            <h4>codecademy &amp; INFORMATION TECHNOLOGY</h4><img src="assets/img/codecademy8973.jpg"height="100px" width="100px">
+                            <h5>2020 - 2021</h5>
+                            <p><em>Web Development Data Science Computer Science Developer Tools</em></p>
                             <p></p>
                         </div>
                     </div>
