--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -493,7 +493,7 @@
 
                     <div class="testimonial-item" data-aos="fade-up">
                         <p>
-                            <i class="bx bxs-quote-alt-left quote-icon-left"></i> Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus
+                            <i class="bx bxs-quote-alt-left quote-icon-left"></i> 
                             at semper.
                             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                         </p>
@@ -557,8 +557,7 @@
 
                 <div class="section-title">
                     <h2>Contact</h2>
-                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
-                        quidem hic quas.</p>
+                    <p></p>
                 </div>
 
                 <div class="row" data-aos="fade-in">
@@ -638,7 +637,7 @@
                 &copy; Copyright <strong><span>RihardsIvanovs</span></strong>
             </div>
             <div class="credits">
-                Designed by <a href="#">Rihardsivanovs</a>
+                Designed by <a href="#">RihardsIvanovs</a>
             </div>
         </div>
     </footer>
