--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -254,13 +254,33 @@
 
                 <div class="row">
                     <div class="col-lg-6" data-aos="fade-up">
-                        <h3 class="resume-title">Darba pieredze</h3>
-                        <div class="resume-item pb-0">
+                        <h3 class="resume-title">Work experience</h3>
+                        <div class="resume-item pb-1">
                             <h4>wordpress Developer</h4>
                             <h5>30.06.2017 – 01.08.2017</h5>
                             <ul>
                                 <p><em>PILAT REAL ESTATE</em><img src="assets/img/images.png"height="50px" width="200px"></p>
                                 <p>Job responsibilities were to create a page home page on a worksheet after drawing up real estate after building in a master for locational buildings in code design and design type code part</p>
+                            </ul>
+                        </div>
+                        <div class="resume-item pb-1">
+                            <h4>Yii php</h4>
+                            <h5>30.06.2017 – 01.08.2017</h5>
+                            <ul>
+                                <p><em>SIA "ID Karte" </em><img src="assets/img/ID Karte.png"height="100px" width="100px"></p>
+                                <p>It is my responsibility to put the Yii PHP Framework on the hostinga to develop a user platfome for the people of Latvia.
+                                met with the aim of harming a person in the hospital after switching over as an e-service can settle for highness and other services</p>
+                            </ul>
+                        </div>
+                        <div class="resume-item pb-1">
+                            <h4>  </h4>
+                            <h5>30.06.2017 – 01.08.2017</h5>
+                            <ul>
+                                <p><em></em>Information Technology Teacher<img src="assets/img/ID Karte.png"height="100px" width="100px"></p>
+                                <p>I was tasked with creating a plan guide for languages HTML, CSS, JAVASCRIT.
+                                   Explain base code usage in HTML, CSS, JAVASCRIT. home development.
+                                    basic code understanding uses javascrit and react conformation explanation code application
+                                    Act Get Started, ES6, HTML, JSX, Components, Props, State, Lifecycle, Events, Formst, CSS, Sass</p>
                             </ul>
                         </div>
 
@@ -272,16 +292,47 @@
                             <p>PHP,MySQL,HTML,CSS,JavaScript,ajax </p>
                         </div>
                         <div class="resume-item">
-                            <h4>Riga Technical University &amp; INFORMATION TECHNOLOGY</h4><img src="assets/img/lejupielādēt.png"height="100px" width="100px">
+                            <h4>Riga Technical University &amp; INFORMATION TECHNOLOGY</h4><img src="assets/img/lejupielādēt.png"height="100px" width="150px">
                             <h5>2016 - 2020</h5>
                             <p><em>First level higher professional study programs:</em></p>
                             <p></p>
                         </div>
                         <div class="resume-item">
-                            <h4>codecademy &amp; INFORMATION TECHNOLOGY</h4><img src="assets/img/codecademy8973.jpg"height="100px" width="100px">
+                            <h4>codecademy &amp; INFORMATION TECHNOLOGY</h4><img src="assets/img/codecademy8973.jpg"height="100px" width="200px">
                             <h5>2020 - 2021</h5>
                             <p><em>Web Development Data Science Computer Science Developer Tools</em></p>
                             <p></p>
+                        </div>
+                        <div class="resume-item">
+                            <h4>Latvian University &amp;Faculty of Pedagogical Psychology and Art</h4><img src="assets/img/LU1.png"height="100px" width="200px">
+                            <h5>2020 - 2021</h5>
+                            <p><em>basics of pedagogy</em></p>
+                            <p></p>
+                        </div>
+                        <div class="resume-item">
+                            <h4>Elements of AI &amp;Introduction to AI</h4><img src="assets/img/images (2).png"height="100px" width="200px">
+                            <h5>2020 - 2021</h5>
+                            <p><em>An Introduction to AI ,Building AI</em></p>
+                            <p>An Introduction to AI is course for everyone interested in learning what AI is, what is possible (and not possible) with AI, and how it affects our lives – with no complicated math or programming required.
+
+                                Building AI is a course where you’ll learn about the actual algorithms that make creating AI methods possible. Some basic Python programming skills are recommended to get the most out of the course.</p>
+                        </div>
+                        <div class="resume-item">
+                            <h4>Printful &amp; Developer full stack</h4><img src="assets/img/test.png"height="100px" width="200px">
+                            <h5>2020 - 2021</h5>
+                            <p><em>DEVELOPER FULL STACK</em></p>
+                            <p> </p>
+                        </div><br>
+                        <h3>Licenses & certifications</h3><br>
+                        <div class="resume-item">
+                            <h4>Linkedin learning&amp; HTML Essential Training</h4><img src="assets/img/test1.png"height="100px" width="100px">
+                            <h5>2020 - 2021</h5>
+                            <p><em>HTML ESSENTIAL TRAINING</em></p>
+                        </div>
+                        <div class="resume-item">
+                            <h4>Linkedin learning&amp; Succeeding in Web Development: Full Stack and Front End</h4><img src="assets/img/test1.png"height="100px" width="100px">
+                            <h5>2020 - 2021</h5>
+                            <p><em>Succeeding in Web Development: Full Stack and Front End</em></p>
                         </div>
                     </div>
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -462,7 +513,7 @@
                     <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                         <div class="icon"><i class="icofont-image"></i></div>
                         <h4 class="title"><a href="">Magni Dolores</a></h4>
-                        <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                        <p class="description"> </p>
                     </div>
                     <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                         <div class="icon"><i class="icofont-settings"></i></div>
