--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -273,17 +273,27 @@
                             </ul>
                         </div>
                         <div class="resume-item pb-1">
-                            <h4>  </h4>
+                            <h4>Technology Teacher</h4>
                             <h5>30.06.2017 – 01.08.2017</h5>
-                            <ul>
-                                <p><em></em>Information Technology Teacher<img src="assets/img/ID Karte.png"height="100px" width="100px"></p>
+                            <ul><img src="assets/img/456.jpg"height="100px" width="150px">
+                                <p><em>Latvian-German vocational education center</em><br> </p>
                                 <p>I was tasked with creating a plan guide for languages HTML, CSS, JAVASCRIT.
                                    Explain base code usage in HTML, CSS, JAVASCRIT. home development.
                                     basic code understanding uses javascrit and react conformation explanation code application
                                     Act Get Started, ES6, HTML, JSX, Components, Props, State, Lifecycle, Events, Formst, CSS, Sass</p>
                             </ul>
                         </div>
-
+                        <div class="resume-item pb-1">
+                            <h4> developer full stack</h4>
+                            <h5>30.06.2017 – 01.08.2017</h5>
+                            <ul><img src="assets/img/1519882964294.png"height="100px" width="150px">
+                                <p><em>c-studio.lv</em><br> </p>
+                                <p>- PHP, JavaScript, TypeScript
+                                    - MySQL
+                                    - Laravel
+                                    - GIT</p>
+                            </ul>
+                        </div>
                         <h3 class="resume-title">Education</h3>
                         <div class="resume-item">
                             <h4> Riga 3 rd vocational school programming technician, ENI Level 3 &amp; programming technician</h4><img src="assets/img/15d585da0bf25110439bae27dd7a85fd.jpg"height="100px" width="100px">
